--- a/web_crawler/ptt_movie.ipynb
+++ b/web_crawler/ptt_movie.ipynb
@@ -92,14 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['title:\\n[新聞] 天若有情30週年 捧紅吳倩蓮2007年全面隱退\\n,link:https://www.ptt.cc/bbs/movie/M.1592369025.A.BFB.html', 'title:\\n[討論] 為什麼man in black(MIB)還沒被進攻？\\n,link:https://www.ptt.cc/bbs/movie/M.1592369905.A.237.html', 'title:\\n[新聞] 《遇見街貓BOB》14歲橘貓辭世！伴主人戒\\n,link:https://www.ptt.cc/bbs/movie/M.1592374474.A.C37.html', 'title:\\n[公告] 板規 2020/03/01 (增加14.1)\\n,link:https://www.ptt.cc/bbs/movie/M.1559611458.A.DCA.html', 'title:\\n[公告] 板規新增每日發文上限規定\\n,link:https://www.ptt.cc/bbs/movie/M.1565855832.A.0A7.html', 'title:\\n[公告] 關於跑步哥\\n,link:https://www.ptt.cc/bbs/movie/M.1578684521.A.1B8.html', 'title:\\n[情報] 近期院線預計重映片單\\n,link:https://www.ptt.cc/bbs/movie/M.1589355894.A.CDD.html', 'title:\\n[公告] 板主選舉\\n,link:https://www.ptt.cc/bbs/movie/M.1590296462.A.895.html']\n"
+      "title:\n",
+      "[新聞] 天若有情30週年 捧紅吳倩蓮2007年全面隱退\n",
+      ",link:https://www.ptt.cc/bbs/movie/M.1592369025.A.BFB.html\n"
      ]
     }
    ],
@@ -117,9 +119,16 @@
     "        title_href = 'https://www.ptt.cc' + item_a.get('href')\n",
     "        article_list.append(\"title:\" + title + \",\" + \"link:\" + title_href)\n",
     "\n",
-    "print(article_list)\n",
+    "print(article_list[0])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
