ptt_movie_rating_search

--- a/web_crawler/ptt_movie.ipynb
+++ b/web_crawler/ptt_movie.ipynb
@@ -92,20 +92,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[好雷] 金魚俱樂部 Die Goldfische  https://www.ptt.cc/bbs/movie/M.1592342329.A.8CA.html\n",
-      "[好雷] 超完美社區 Vivarium https://www.ptt.cc/bbs/movie/M.1592351742.A.F76.html\n",
-      "[好雷] 阿比與阿弟勇闖鬼門關 https://www.ptt.cc/bbs/movie/M.1592217889.A.528.html\n",
-      "[好雷]《1/2的魔法》觀後心得  https://www.ptt.cc/bbs/movie/M.1592225085.A.D9A.html\n",
-      "[好雷]《超完美社區》我們為什麼非得要選擇挖洞？  https://www.ptt.cc/bbs/movie/M.1592239508.A.D39.html\n",
-      "[好雷] 摩比小子 Playmobil: The Movie (2019) https://www.ptt.cc/bbs/movie/M.1592253146.A.512.html\n",
-      "[好雷]《絕命大平台》  https://www.ptt.cc/bbs/movie/M.1592275143.A.588.html\n"
+      "[好雷] 金魚俱樂部 Die Goldfische \n",
+      "https://www.ptt.cc/bbs/movie/M.1592342329.A.8CA.html\n",
+      "                                        \n",
+      "[好雷] 超完美社區 Vivarium\n",
+      "https://www.ptt.cc/bbs/movie/M.1592351742.A.F76.html\n",
+      "                                        \n",
+      "[好雷] 阿比與阿弟勇闖鬼門關\n",
+      "https://www.ptt.cc/bbs/movie/M.1592217889.A.528.html\n",
+      "                                        \n",
+      "[好雷]《1/2的魔法》觀後心得 \n",
+      "https://www.ptt.cc/bbs/movie/M.1592225085.A.D9A.html\n",
+      "                                        \n",
+      "[好雷]《超完美社區》我們為什麼非得要選擇挖洞？ \n",
+      "https://www.ptt.cc/bbs/movie/M.1592239508.A.D39.html\n",
+      "                                        \n",
+      "[好雷] 摩比小子 Playmobil: The Movie (2019)\n",
+      "https://www.ptt.cc/bbs/movie/M.1592253146.A.512.html\n",
+      "                                        \n",
+      "[好雷]《絕命大平台》 \n",
+      "https://www.ptt.cc/bbs/movie/M.1592275143.A.588.html\n",
+      "                                        \n"
      ]
     }
    ],
@@ -132,7 +146,7 @@
     "            title_href = 'https://www.ptt.cc' + item_a.get('href')\n",
     "            title_fixed = title.replace(\"\\n\",\"\")\n",
     "            \n",
-    "            if title_fixed[1:3] == '好雷':\n",
+    "            if title_fixed[1:3] == '好雷': \n",
     "                nice_movie_list.append(title_fixed)\n",
     "                nice_movie_link_list.append(title_href)\n",
     "            elif title_fixed[1:3] == '普雷':\n",
@@ -152,8 +166,13 @@
     "    get_info(url)\n",
     "\n",
     "for num in range(len(nice_movie_list)):\n",
-    "    print(nice_movie_list[num],nice_movie_link_list[num])\n",
-    "    num += num"
+    "    print(nice_movie_list[num])\n",
+    "    print(nice_movie_link_list[num])\n",
+    "    print(\" \"*40)\n",
+    "    num += num\n",
+    "# \n",
+    "# for i, element in enumerate(nice_movie_list):\n",
+    "#     print(element)"
    ]
   },
   {
