isometric the title

--- a/web_crawler/ptt_movie.ipynb
+++ b/web_crawler/ptt_movie.ipynb
@@ -92,33 +92,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[好雷] 金魚俱樂部 Die Goldfische \n",
-      "https://www.ptt.cc/bbs/movie/M.1592342329.A.8CA.html\n",
+      "22\n",
+      "[好雷] 複製柔伊 My Zoe                             https://www.ptt.cc/bbs/movie/M.1592422642.A.F9D.html\n",
       "                                        \n",
-      "[好雷] 超完美社區 Vivarium\n",
-      "https://www.ptt.cc/bbs/movie/M.1592351742.A.F76.html\n",
+      "32\n",
+      "[好雷] 殺機疑雲 State Like Sleep                   https://www.ptt.cc/bbs/movie/M.1592430129.A.A94.html\n",
       "                                        \n",
-      "[好雷] 阿比與阿弟勇闖鬼門關\n",
-      "https://www.ptt.cc/bbs/movie/M.1592217889.A.528.html\n",
+      "31\n",
+      "[好雷] 數碼寶貝 last evolution                     https://www.ptt.cc/bbs/movie/M.1592376144.A.5E8.html\n",
       "                                        \n",
-      "[好雷]《1/2的魔法》觀後心得 \n",
-      "https://www.ptt.cc/bbs/movie/M.1592225085.A.D9A.html\n",
+      "23\n",
+      "[好雷] 記得雨，不記得你                            https://www.ptt.cc/bbs/movie/M.1592389684.A.3A5.html\n",
       "                                        \n",
-      "[好雷]《超完美社區》我們為什麼非得要選擇挖洞？ \n",
-      "https://www.ptt.cc/bbs/movie/M.1592239508.A.D39.html\n",
+      "33\n",
+      "[好雷] 金魚俱樂部 Die Goldfische                   https://www.ptt.cc/bbs/movie/M.1592342329.A.8CA.html\n",
       "                                        \n",
-      "[好雷] 摩比小子 Playmobil: The Movie (2019)\n",
-      "https://www.ptt.cc/bbs/movie/M.1592253146.A.512.html\n",
-      "                                        \n",
-      "[好雷]《絕命大平台》 \n",
-      "https://www.ptt.cc/bbs/movie/M.1592275143.A.588.html\n",
+      "26\n",
+      "[好雷] 超完美社區 Vivarium                         https://www.ptt.cc/bbs/movie/M.1592351742.A.F76.html\n",
       "                                        \n"
      ]
     }
@@ -166,8 +163,12 @@
     "    get_info(url)\n",
     "\n",
     "for num in range(len(nice_movie_list)):\n",
-    "    print(nice_movie_list[num])\n",
-    "    print(nice_movie_link_list[num])\n",
+    "    length = 0 \n",
+    "    for word in nice_movie_list[num]:\n",
+    "        length += chr_width(word)\n",
+    "    nice_movie_list[num] += ' '*(50-length)\n",
+    "    print(length)\n",
+    "    print(nice_movie_list[num],nice_movie_link_list[num])\n",
     "    print(\" \"*40)\n",
     "    num += num\n",
     "# \n",
@@ -177,20 +178,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import unicodedata\n",
+    "def chr_width(c):\n",
+    "    if (unicodedata.east_asian_width(c) in ('F','W','A')):\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1\n",
+    "chr_width(\"你\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "新聞\n"
+      "7\n"
      ]
     }
    ],
    "source": [
-    "line = \"[新聞]\"\n",
-    "print(line[1:-1])"
+    "words = \"你好嗎?\"\n",
+    "length = 0\n",
+    "for word in words:\n",
+    "    length += chr_width(word)\n",
+    "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[好雷] 數碼寶貝 last evolution                                                                       https://www.ptt.cc/bbs/movie/M.1592376144.A.5E8.html\n",
+      " \n",
+      "[好雷] 記得雨，不記得你                                                                              https://www.ptt.cc/bbs/movie/M.1592389684.A.3A5.html\n",
+      " \n",
+      "[好雷] 金魚俱樂部 Die Goldfische                                                                     https://www.ptt.cc/bbs/movie/M.1592342329.A.8CA.html\n",
+      " \n",
+      "[好雷] 超完美社區 Vivarium                                                                           https://www.ptt.cc/bbs/movie/M.1592351742.A.F76.html\n",
+      " \n",
+      "[好雷] 阿比與阿弟勇闖鬼門關                                                                          https://www.ptt.cc/bbs/movie/M.1592217889.A.528.html\n",
+      " \n",
+      "[好雷]《1/2的魔法》觀後心得                                                                          https://www.ptt.cc/bbs/movie/M.1592225085.A.D9A.html\n",
+      " \n",
+      "[好雷]《超完美社區》我們為什麼非得要選擇挖洞？                                                       https://www.ptt.cc/bbs/movie/M.1592239508.A.D39.html\n",
+      " \n",
+      "[好雷] 摩比小子 Playmobil: The Movie (2019)                                                          https://www.ptt.cc/bbs/movie/M.1592253146.A.512.html\n",
+      " \n",
+      "[好雷]《絕命大平台》                                                                                 https://www.ptt.cc/bbs/movie/M.1592275143.A.588.html\n",
+      " \n",
+      "[好雷] 艾瑪. Emma. ，綿羊小鴨科茲窩                                                                  https://www.ptt.cc/bbs/movie/M.1592194774.A.BEB.html\n",
+      " \n",
+      "[好雷] 龍門客棧                                                                                      https://www.ptt.cc/bbs/movie/M.1592202825.A.CBB.html\n",
+      " \n",
+      "[好雷] 不可饒恕 - 2010韓國犯罪片,很強看就對了                                                        https://www.ptt.cc/bbs/movie/M.1592133494.A.C3D.html\n",
+      " \n",
+      "[好雷]《決戰最前線》對戰爭慘痛代價的反思                                                             https://www.ptt.cc/bbs/movie/M.1592151203.A.6F6.html\n",
+      " \n",
+      "[好雷]鋼鐵勳章 越戰老兵的療癒之旅                                                                    https://www.ptt.cc/bbs/movie/M.1592107602.A.B32.html\n",
+      " \n",
+      "[好雷] 辛德勒的名單                                                                                  https://www.ptt.cc/bbs/movie/M.1592060326.A.E7F.html\n",
+      " \n",
+      "[好雷]《深海擴散》從冰冷科學裡找到唯美與浪漫                                                         https://www.ptt.cc/bbs/movie/M.1592063368.A.FD3.html\n",
+      " \n",
+      "[好雷] 她們Little Women                                                                              https://www.ptt.cc/bbs/movie/M.1592067042.A.9E6.html\n",
+      " \n",
+      "[好雷] 燃燒烈愛Burning                                                                               https://www.ptt.cc/bbs/movie/M.1592028345.A.36F.html\n",
+      " \n",
+      "[好雷] 衝出封鎖線:場面夠爽，過程刺激的鬼抓人                                                         https://www.ptt.cc/bbs/movie/M.1592029057.A.0CD.html\n",
+      " \n",
+      "[好雷] 北非諜影                                                                                      https://www.ptt.cc/bbs/movie/M.1592046784.A.FC5.html\n",
+      " \n",
+      "[好雷] 《晚班》坐旁邊的跟你想的不一樣                                                                https://www.ptt.cc/bbs/movie/M.1591982048.A.857.html\n",
+      " \n",
+      "[好雷] 波隆那愛情故事 Lovers: piccolo film sull'amore                                                https://www.ptt.cc/bbs/movie/M.1591940095.A.0D5.html\n",
+      " \n",
+      "[好雷] 深海擴散 Sea Fever                                                                            https://www.ptt.cc/bbs/movie/M.1591963083.A.3A5.html\n",
+      " \n",
+      "[好雷] 魔女宅急便                                                                                    https://www.ptt.cc/bbs/movie/M.1591863458.A.558.html\n",
+      " \n",
+      "[好雷] 二刷國片《蚵豐村》                                                                            https://www.ptt.cc/bbs/movie/M.1591884763.A.898.html\n",
+      " \n",
+      "[好雷] 蚵豐村                                                                                        https://www.ptt.cc/bbs/movie/M.1591888880.A.FFF.html\n",
+      " \n",
+      "[好雷] 怒火圍城 11 Settembre 1683 (2012)                                                             https://www.ptt.cc/bbs/movie/M.1591801365.A.538.html\n",
+      " \n",
+      "[好雷] 史蒂芬金之《1922》：娓娓道來的恐怖                                                            https://www.ptt.cc/bbs/movie/M.1591812196.A.A6E.html\n",
+      " \n",
+      "[好雷] 海潮之聲                                                                                      https://www.ptt.cc/bbs/movie/M.1591794184.A.D7B.html\n",
+      " \n",
+      "[好雷] 詩情攝慾 Curiosa                                                                              https://www.ptt.cc/bbs/movie/M.1591732840.A.670.html\n",
+      " \n",
+      "[好雷] 侯孝賢的短片：兒子的大玩偶                                                                    https://www.ptt.cc/bbs/movie/M.1591764689.A.903.html\n",
+      " \n",
+      "[好雷] 派對才要開始The Party's Just Beginning                                                        https://www.ptt.cc/bbs/movie/M.1591670862.A.7D4.html\n",
+      " \n",
+      "[好雷] 愛上變身情人The Beauty Inside                                                                 https://www.ptt.cc/bbs/movie/M.1591675283.A.D4A.html\n",
+      " \n",
+      "[好雷] 心之谷                                                                                        https://www.ptt.cc/bbs/movie/M.1591684826.A.F43.html\n",
+      " \n",
+      "[好雷] 愛美獎行動 觀影心得                                                                           https://www.ptt.cc/bbs/movie/M.1591610167.A.707.html\n",
+      " \n",
+      "[好雷]《美好拾光公司》-眷戀做為愛人者的自己                                                          https://www.ptt.cc/bbs/movie/M.1591628626.A.422.html\n",
+      " \n",
+      "[好雷] 走進梅譚府-The Painted Veil/猜心                                                              https://www.ptt.cc/bbs/movie/M.1591632394.A.1C2.html\n",
+      " \n",
+      "[好雷]《影裏》倒下的地方會長出新生命                                                                 https://www.ptt.cc/bbs/movie/M.1591543985.A.B58.html\n",
+      " \n",
+      "[好雷] 守護者 Watchmen (2009)                                                                        https://www.ptt.cc/bbs/movie/M.1591553480.A.173.html\n",
+      " \n",
+      "[好雷]重看教父二                                                                                     https://www.ptt.cc/bbs/movie/M.1591587229.A.FC7.html\n",
+      " \n",
+      "[好雷] <戀愛倒帶中>，偷吃年輕版老公?                                                                 https://www.ptt.cc/bbs/movie/M.1591587942.A.25E.html\n",
+      " \n",
+      "[好雷] 鋒迴路轉 - 裝逼還挺有形                                                                       https://www.ptt.cc/bbs/movie/M.1591508868.A.CEB.html\n",
+      " \n",
+      "[好雷] 《婚姻故事》- 為了贏而選擇了傷害                                                              https://www.ptt.cc/bbs/movie/M.1591512461.A.B6A.html\n",
+      " \n",
+      "[好雷] 1/2的魔法                                                                                     https://www.ptt.cc/bbs/movie/M.1591534981.A.412.html\n",
+      " \n",
+      "[好雷]《夜半歌聲：4K數位修復》相信分離不會是一輩子                                                   https://www.ptt.cc/bbs/movie/M.1591459138.A.F95.html\n",
+      " \n",
+      "[好雷] 在這裡跟《屍憶》說聲SORRY！                                                                   https://www.ptt.cc/bbs/movie/M.1591473623.A.FB7.html\n",
+      " \n",
+      "[好雷] 從盧貝松的電影“安娜”看男女關係                                                              https://www.ptt.cc/bbs/movie/M.1591419915.A.A70.html\n",
+      " \n",
+      "[好雷] 【電影心得】《侏羅紀公園》                                                                    https://www.ptt.cc/bbs/movie/M.1591452522.A.06B.html\n",
+      " \n",
+      "[好雷]《神父同志》─以信仰精神挑戰既有教條                                                           https://www.ptt.cc/bbs/movie/M.1591452649.A.A14.html\n",
+      " \n",
+      "[好雷]《詭妹》矛盾都趁人們不關心時入侵家庭                                                           https://www.ptt.cc/bbs/movie/M.1591454545.A.B17.html\n",
+      " \n",
+      "[好雷] 《末代皇帝》記皇權的囚徒                                                                      https://www.ptt.cc/bbs/movie/M.1591383228.A.BF8.html\n",
+      " \n",
+      "[好雷] 初戀時光機 Time Freak (2018)                                                                  https://www.ptt.cc/bbs/movie/M.1591385609.A.3B4.html\n",
+      " \n",
+      "[好雷] 真愛貓下去 Miamor perdido (2018)                                                              https://www.ptt.cc/bbs/movie/M.1591394883.A.AA8.html\n",
+      " \n",
+      "[好雷]《愛美獎行動》關於美，你可以有更多定義                                                         https://www.ptt.cc/bbs/movie/M.1591411995.A.1AC.html\n",
+      " \n",
+      "[好雷] 復仇謎奏 The Rhythm Section                                                                   https://www.ptt.cc/bbs/movie/M.1591307524.A.DD1.html\n",
+      " \n",
+      "[好雷] 隔12年二刷的黑暗騎士                                                                          https://www.ptt.cc/bbs/movie/M.1591277817.A.430.html\n",
+      " \n",
+      "[好雷] 教宗的承繼                                                                                    https://www.ptt.cc/bbs/movie/M.1591280157.A.FC1.html\n",
+      " \n",
+      "[好雷] 【兔嘲男孩】你想在孩子身上留下甚麼？                                      https://www.ptt.cc/bbs/movie/M.1591194215.A.84F.html\n",
+      " \n",
+      "[好雷] 罪人的控訴 Der Fall Collini                                               https://www.ptt.cc/bbs/movie/M.1591221382.A.832.html\n",
+      " \n",
+      "[好雷] 謝謝你愛過我 Babyteeth                                                    https://www.ptt.cc/bbs/movie/M.1591235633.A.ED4.html\n",
+      " \n",
+      "[好雷] 年少時代                                                                  https://www.ptt.cc/bbs/movie/M.1591172610.A.A5A.html\n",
+      " \n",
+      "[好雷] 當愛再來的時候 Gloria Mundi                                               https://www.ptt.cc/bbs/movie/M.1591136445.A.A5C.html\n",
+      " \n",
+      "[好雷] 愛美獎行動 Misbehaviour                                                   https://www.ptt.cc/bbs/movie/M.1591159187.A.D41.html\n",
+      " \n",
+      "[好雷] 《當男人愛上女人》：浪漫的愛情                     https://www.ptt.cc/bbs/movie/M.1591027390.A.DB9.html\n",
+      " \n",
+      "[好雷] 1/2的魔法   不意外地又被皮克斯惹哭了                     https://www.ptt.cc/bbs/movie/M.1591032452.A.F22.html\n",
+      " \n",
+      "[好雷] 情慾凡爾賽 Les adieux a la reine(2012)                     https://www.ptt.cc/bbs/movie/M.1591061001.A.39B.html\n",
+      " \n",
+      "[好雷]《奪魂索》不能吃的東西就不要亂吃                      https://www.ptt.cc/bbs/movie/M.1590931607.A.3D1.html\n",
+      " \n",
+      "[好雷] 樹大招風:香港最後一口氣，隨風而去。                      https://www.ptt.cc/bbs/movie/M.1590932749.A.78A.html\n",
+      " \n",
+      "[好雷] 「靠譜歌王」Yesterday is Today                      https://www.ptt.cc/bbs/movie/M.1590934302.A.EFB.html\n",
+      " \n",
+      "[好雷]《罪人的控訴》司法判決標準的反思                      https://www.ptt.cc/bbs/movie/M.1590937123.A.1C0.html\n",
+      " \n",
+      "[好雷] 現在很想見你                      https://www.ptt.cc/bbs/movie/M.1590889581.A.28C.html\n",
+      " \n",
+      "[好雷] 重返初遇之夜                     https://www.ptt.cc/bbs/movie/M.1590890706.A.D3D.html\n",
+      " \n",
+      "[好雷?] 寂寞拍賣師                     https://www.ptt.cc/bbs/movie/M.1590909116.A.28A.html\n",
+      " \n",
+      "[好雷] 戰慄糖果屋 Gretel & Hansel                      https://www.ptt.cc/bbs/movie/M.1590911949.A.BBC.html\n",
+      " \n",
+      "[好雷] 1/2的魔法                     https://www.ptt.cc/bbs/movie/M.1590918089.A.723.html\n",
+      " \n",
+      "[好雷] 1/2的魔法-什麼是所謂的1/2?                     https://www.ptt.cc/bbs/movie/M.1590843042.A.060.html\n",
+      " \n",
+      "[好雷]《放飛大丈夫》笑點來得快去得也快                      https://www.ptt.cc/bbs/movie/M.1590845931.A.3F8.html\n",
+      " \n",
+      "[好雷]《愛美獎行動》落實平權可能面臨的挑戰                      https://www.ptt.cc/bbs/movie/M.1590853995.A.BF5.html\n",
+      " \n",
+      "[好雷] 美麗華IMAX黑暗騎士三部曲                     https://www.ptt.cc/bbs/movie/M.1590854529.A.2B3.html\n",
+      " \n",
+      "[好雷] 父後七日                     https://www.ptt.cc/bbs/movie/M.1590821022.A.E43.html\n",
+      " \n",
+      "[好雷] 血色羔羊 The Other Lamb https://www.ptt.cc/bbs/movie/M.1590752413.A.0B0.html\n",
+      " \n",
+      "[好雷]《永不放棄：詹姆斯艾利森》科學研究的根本價值 https://www.ptt.cc/bbs/movie/M.1590766871.A.6E6.html\n",
+      " \n",
+      "[好雷] 巴黎寂寞不打烊 Deux moi https://www.ptt.cc/bbs/movie/M.1590681631.A.90E.html\n",
+      " \n",
+      "[好雷] 如果這世界貓消失了 https://www.ptt.cc/bbs/movie/M.1590686416.A.287.html\n",
+      " \n",
+      "[好雷]我想念我自己 - 我沒有受苦,我只是在努力 https://www.ptt.cc/bbs/movie/M.1590659390.A.6AB.html\n",
+      " \n",
+      "[好雷] 窒息 - 很難讓人專心看完的優秀恐怖片 https://www.ptt.cc/bbs/movie/M.1590495716.A.ED5.html\n",
+      " \n",
+      "[好雷]《巴黎寂寞不打烊》在相遇前成為更好的自己 https://www.ptt.cc/bbs/movie/M.1590508406.A.4BD.html\n",
+      " \n",
+      "[好雷] 1/2的魔法-真正的魔法是擁有彼此 https://www.ptt.cc/bbs/movie/M.1590464869.A.21C.html\n",
+      " \n",
+      "[好雷] 奇蹟救援（泰國野豬隊洞窟潛水救援行動） https://www.ptt.cc/bbs/movie/M.1590474776.A.CF4.html\n",
+      " \n",
+      "[好雷] 謊畫情人 The Burnt Orange Heresy  https://www.ptt.cc/bbs/movie/M.1590486600.A.7BB.html\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_info(url):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    results = soup.select('div.title')\n",
+    "    \n",
+    "    for item in results:\n",
+    "        item_a = item.select_one(\"a\")\n",
+    "        if item_a:\n",
+    "            \n",
+    "            title = item.text\n",
+    "            title_href = 'https://www.ptt.cc' + item_a.get('href')\n",
+    "            title_fixed = title.replace(\"\\n\",\"\")\n",
+    "            \n",
+    "            if title_fixed[1:3] == '好雷': \n",
+    "                nice_movie_list.append(title_fixed)\n",
+    "                nice_movie_link_list.append(title_href)\n",
+    "\n",
+    "for page in range(3):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    btn = soup.select('div.btn-group > a')\n",
+    "    up_page_btn_href = btn[3]['href']\n",
+    "    next_page_url = 'https://www.ptt.cc' + up_page_btn_href\n",
+    "    url = next_page_url\n",
+    "    get_info(url)\n",
+    "\n",
+    "for num in range(len(nice_movie_list)):\n",
+    "    length = 0 \n",
+    "    for word in nice_movie_list[num]:\n",
+    "        length += chr_width(word)\n",
+    "    print(length)\n",
+    "    print(nice_movie_list[num],nice_movie_link_list[num])\n",
+    "    print(\" \")\n",
+    "    num += num"
    ]
   },
   {
