--- a/web_crawler/ptt_movie.ipynb
+++ b/web_crawler/ptt_movie.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "2"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,19 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "words = \"你好嗎?\"\n",
+    "words = \"“\"\n",
     "length = 0\n",
     "for word in words:\n",
     "    length += chr_width(word)\n",
